docs: create offer api docs
